corrected spacing

--- a/front/src/CustomerUI/Styles/CustomerKiosk.css
+++ b/front/src/CustomerUI/Styles/CustomerKiosk.css
@@ -4,7 +4,7 @@
   justify-items: center;
   grid-template-columns: repeat(12, 1fr);
   gap: 30px;
-  grid-auto-rows: minmax(100px, auto);
+  grid-auto-rows: minmax(80px, auto);
 
   height: 35%;
 }
@@ -27,7 +27,8 @@
   grid-column: 7 / 12;
   grid-row: 1;
   max-width: 100%; 
-  height: 100px;
+  max-height: 80px;
+  margin-top: 10px;
 }
 
 .profile {
@@ -85,14 +86,23 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+
+  height: 900px;
   overflow: auto;
 }
 
-.itemFamily {
+/* .itemFamily {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 200px;
   padding: 30px;
   margin: 30px;
+} */
+
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
